app/assets/stylesheets/custom.css.scss
$navbar-default-bg: black;

@import "bootstrap-sprockets";
@import "bootstrap";

#logo {
  float: left;

  font-size: 1.7em;

  color: #fff;

  text-transform: uppercase;

  letter-spacing: -1px;

  font-weight: bold;
}

#logo:hover {
  color: #fff;

  text-decoration: none;
}

.center {
  text-align: center;
}

.jumbotron {
  background-image: asset-url("BetonGreyOptions_1.jpg");

  background-size: cover;

  height: 550px;
}

.jumbotron h1 {
  color: #000;

  text-align: center;

  margin-bottom: 20px;

  letter-spacing: -1px;

  font-weight: bold;
}

.btn-xlarge {
  font-size: 1.7em;

  background-color: black;
}
.article-actions {
  border-top: 1px solid #eaeaea;

  padding-top: 5px;
}

.description {
  margin-top: 0;
}
.article-title {
  font-weight: bold;

  font-size: 1.5em;
}

.article-body {
  border-top: 1px solid #eaeaea;

  padding-top: 15px;

  padding-bottom: 15px;
}
.article-meta-details {
  border-top: 1px solid #eaeaea;

  margin-top: 15px;
}
.listing {
  list-style: none;

  padding-left: 0;
}
footer {
  margin-top: 45px;

  padding-top: 5px;

  border-top: 1px solid #eaeaea;

  color: #777;
}

footer a:hover {
  color: #222;
}

footer small {
  float: left;
}

footer ul {
  float: right;

  list-style: none;
}

footer ul li {
  float: left;

  margin-left: 15px;
}

